_sass/layout.scss
.global-wrapper {
  margin: 0 auto;
  padding: 1rem 2rem;
  max-width: 980px;
  .site-header {
    padding: 0.5rem 0;
    overflow: auto;
    h1 {
      display: inline-block;
      margin: 0;
      margin-right: 0.5rem;
      font-size: 1rem;
    }
    .tagline {
      display: inline-block;
      margin: 0;
      font-size: 0.8rem;
      color: dimgray;
    }
    .tagline:before {
      content: '— ';
    }
    .navigation {
      ul {
        display: flex;
        flex-wrap: wrap;
        margin: 1rem 0 0 0;
        padding-left: 0;
        li {
          padding: 0.5rem;
          padding-left: 0 ;
          padding-top: 0; 
          list-style: none;
        }
      }
    }
  }
  .site-content {
    // padding: 0 1.5rem;
    h1 {
      // margin-: 0.5rem 0;
      font-size: 1rem;
    }
    h2 {
      font-size: 1rem;
    }
    .posts-content {
      .artworks-list {
        display: flex;
        flex-wrap: wrap;
        flex-flow: row wrap;
        margin: 0;
        padding-left: 0;
        li {
          padding: 1rem 0;
          margin-right: 2%;
          width: 18%;
          list-style: none;
          box-sizing: border-box;
          figure {
            margin: 0;
            >a {
              display: flex;
              overflow: hidden;
              justify-content: center;
              align-items: center;
              height: 120px;
            }
            figcaption {
              margin: 0.5rem 0;
              text-align: center;
              a {
                font-size: 0.8rem;
              }
            }
          }
        }
      }
      .texts-list {
        list-style: none;
        padding-left: 0.5rem;
        li {
          line-height: 1.7rem;
          .post-date {
            margin-right: 0.3rem;
            margin-left: -0.2rem;
            font-size: 0.9rem;
            color: dimgray;
          }
        }
        li:before {
          content: '_';
        }
      }
    }
    .page-content {
      ul {
        list-style: none;
        padding-left: 0;
        li {
          line-height: 1.2rem;
        }
      }
    }
  }
  .site-footer {
    position: fixed;
    padding: 0.2em;
    bottom: 0;
    left: 0;
    width: 100%;
    background-color: white;
    p {
      text-align: center;
    }
  }
}

